add keeper jvm arguments